# libsox-sys

./: Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
implementors/core/clone/: trait.Clone.js
libsox_sys/: all.html  constant.SOX_DEFAULT_CHANNELS.html  constant.SOX_DEFAULT_PRECISION.html  constant.SOX_DEFAULT_RATE.html  constant.SOX_EFF_ALPHA.html  constant.SOX_EFF_CHAN.html  constant.SOX_EFF_DEPRECATED.html  constant.SOX_EFF_GAIN.html  constant.SOX_EFF_INTERNAL.html  constant.SOX_EFF_LENGTH.html  constant.SOX_EFF_MCHAN.html  constant.SOX_EFF_MODIFY.html  constant.SOX_EFF_NULL.html  constant.SOX_EFF_PREC.html  constant.SOX_EFF_RATE.html  constant.SOX_FILE_BIG_END.html  constant.SOX_FILE_BIT_REV.html  constant.SOX_FILE_CHANS.html  constant.SOX_FILE_DEVICE.html  constant.SOX_FILE_ENDBIG.html  constant.SOX_FILE_ENDIAN.html  constant.SOX_FILE_LIT_END.html  constant.SOX_FILE_MONO.html  constant.SOX_FILE_NIB_REV.html  constant.SOX_FILE_NOSTDIO.html  constant.SOX_FILE_PHONY.html  constant.SOX_FILE_QUAD.html  constant.SOX_FILE_REWIND.html  constant.SOX_FILE_STEREO.html  constant.SOX_MAX_NLOOPS.html  constant.SOX_SAMPLE_PRECISION.html  constant.SOX_SEEK_SET.html  constant.SOX_UNSPEC.html  constant.lsx_io_type_lsx_io_file.html  constant.lsx_io_type_lsx_io_pipe.html  constant.lsx_io_type_lsx_io_url.html  constant.sox_bool_sox_false.html  constant.sox_bool_sox_true.html  constant.sox_encoding_t_SOX_ENCODINGS.html  constant.sox_encoding_t_SOX_ENCODING_ALAW.html  (+167 more)
src/: lib.rs
src/libsox_sys/: lib.rs.html
(+4 files in other folders)
