[package]
name = "libsox-sys"
version = "0.1.0"
authors = ["Alixinne <alixinne@pm.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/alixinne/libsox-sys"
homepage = "https://github.com/alixinne/libsox-sys"
documentation = "https://alixinne.github.io/libsox-sys/"
keywords = ["ffi", "bindings", "sox", "audio"]
categories = ["external-ffi-bindings"]
build = "build.rs"
exclude = ["/.travis.yml"]
description = """
Raw FFI bindings to libsox
"""
edition = "2018"

[badges]
travis-ci = { repository = "alixinne/libsox-sys" }

[dependencies]

[build-dependencies]
bindgen = "0.49.0"

[dev-dependencies]
libc = "0.2.51"
